FIX height on mobile

--- a/assets/css/_alert_message.scss
+++ b/assets/css/_alert_message.scss
@@ -1,4 +1,3 @@
-/* message d'alerte activé */
 .sticky__alert {
   position: sticky !important;
   position: -webkit-sticky;
@@ -24,14 +23,14 @@
 
 @media screen and (min-width: 200px) and (max-width: 400px) {
   .sticky__alert {
-    position: sticky !important;
-    overflow: scroll;
-    height: 7rem;
+    position: static !important;
+    overflow-y: scroll;
+    height: auto;
+    max-height: 7rem;
     top: -7rem;
   }
 
   .message-alert {
-    //overflow-y: auto;
     height: auto;
     top: 0;
   }
@@ -47,31 +46,4 @@
     height: auto;
     top: 0;
   }
-
 }
-
-//@media screen and (max-width: 1024px) and (orientation: portrait) {
-//  .sticky__alert {
-//    overflow: scroll;
-//    height: 15rem;
-//  }
-//
-//  .message-alert {
-//    height: 10rem;
-//  }
-//
-//}
-
-
-//@media (min-width: 820px) and (max-height: 300px) {
-//  //.sticky__alert {
-//  //  overflow: scroll;
-//  //  height: 0;
-//  //}
-//
-//  .message-alert {
-//    height: 0;
-//    top: 10rem;
-//  }
-//
-//}
